informações do pedido

--- a/index.html
+++ b/index.html
@@ -590,6 +590,11 @@
         }
 
 
+        @media (min-width: 576px) {
+            .modal-md {
+                max-width: 430px !important;
+            }
+        }
 
         .header__content-start .btn {
           border-radius: 4px;
