ajuste visuais e tela de kds

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
   <link href="//static.vdo-web.com/fonts/solid-icons/premium-solid-icons.min.css" rel="stylesheet">
 
   <!-- theme -->
-  <link rel="stylesheet"
-    href="//static.vdo-web.com/assets/buscontrol-theme-css-2.0.0/buscontrol-theme-bootstrap.min.css">
-  <link rel="stylesheet" href="//static.vdo-web.com/assets/buscontrol-theme-css-2.0.0/buscontrol-theme.min.css">
+
+
+  <link rel="stylesheet"href="https://themeon.net/nifty/v3.0.1/assets/css/bootstrap.min.75a07e3a3100a6fed983b15ad1b297c127a8c2335854b0efc3363731475cbed6.css">
+  <link rel="stylesheet"href="https://themeon.net/nifty/v3.0.1/assets/css/nifty.min.4d1ebee0c2ac4ed3c2df72b5178fb60181cfff43375388fee0f4af67ecf44050.css">
+  
+  <link rel="stylesheet" href="pages/md/bus.min.css">
 
   <link rel="stylesheet" href="pages/md/main.css">
 
@@ -107,8 +110,9 @@
 
         <p>Aguarde alguns segundos, os seus dados estão sendo carregados ...</p>
 
-        <img style="margin-bottom: 17px;" src="//static.vdo-web.com/images/vdo/logo_bus_blue_152x62.png"
-          class="wait-icon">
+    
+       <svg style="margin-bottom: 17px;"  class="wait-icon" xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 33.867 33.867" xmlns:v="https://vecta.io/nano"><circle cx="26.187" cy="6.85" r="4.349" fill="#f9f906" paint-order="stroke fill markers"/><path d="M7.088 26.91S4.468 8.029 11.884 6.992c6.07-.806 7.084 15.549 9.744 14.188 1.068-.546 1.029-8.163 1.029-8.163s.917.917 3.013 1.197c2.008.268 2.946-.359 2.946-.359s-1.883 12.397-6.678 12.797c-5.269.44-6.454-10.907-9.569-12.649-1.545-.864-3.686 9.795-3.383 12.598-.373.558-1.896.31-1.896.31z" fill="#92e84a" paint-order="stroke fill markers"/></svg>
+
       </div>
     </div>
   </div>
@@ -888,7 +892,13 @@
 
   <script src="pages/js/controllers/MainPageController.js"></script>
  <script src="pages/js/controllers/PedidosPageController.js"></script>
-
+ <script src="pages/js/controllers/KDSMonitorPageController.js"></script>
+ <script src="pages/js/controllers/ClientesPageController.js"></script>
+ <script src="pages/js/controllers/ConfiguracoesPageController.js"></script>
+ <script src="pages/js/controllers/DespachosPageController.js"></script>
+ <script src="pages/js/controllers/EntregadoresPageController.js"></script>
+ <script src="pages/js/controllers/RelatoriosPageController.js"></script>
+ <script src="pages/js/controllers/UsuariosPageController.js"></script>
 
 </body>
 
